--- a/css/style.css
+++ b/css/style.css
@@ -73,17 +73,30 @@ nav {
 #banner {
     background-image: url(../images/assets/hero-bg.png);
     height: 674px;
-
-
+    padding: 0px 7px 0 7px;
     background-repeat: no-repeat;
     text-align: center;
-    margin: 0 auto;
+    border: 1px solid black;
+    margin: 0;
+
+
+}
+
+.banner-content {
+
+    padding: 51px 295px 76px;
+    margin-top: 115px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+
 }
 
 .banner-Fockus {
     background-color: #FFFFFF;
 
-    width: 229px;
+    width: 200px;
 
     border-radius: 100px;
 
@@ -91,20 +104,22 @@ nav {
 
     margin-bottom: 16px;
     display: flex;
-    text-align: center;
+    align-items: center;
 }
 
 .banner-Fockus .dot {
 
     background-color: green;
-    width: 10px;
-    height: 10px;
+    width: 5px;
+    height: 5px;
     font-size: x-large;
     color: #df0f00;
     border-radius: 50%;
     border: 2px solid black;
     margin-right: 7px;
     box-shadow: 0px 2px 10px #469165;
+    margin-top: 0;
+    margin-left: 10px;
 
 }
 
@@ -116,7 +131,7 @@ nav {
 
 .banner-content h1 {
     color: #FFFFFF;
-    opacity: 90%;
+    opacity: 0.9;
     font-size: 72px;
 }
 
@@ -136,18 +151,14 @@ nav {
 
     font-size: 18px;
     line-height: 24px;
-    max-width: 1360px;
+
     margin-bottom: 32px;
 
 
 
 }
 
-.banner-content {
-    max-width: 1360px;
-    padding: 51px 295px 76px;
 
-}
 
 .banner-content .btn {
     align-items: center;
@@ -163,17 +174,41 @@ nav {
 }
 
 .btn-2 {
-    margin: 2px solid #FFFFFF;
+    display: flex;
+    border: 2px solid white;
     border-radius: 4px;
     width: 198px;
+    height: 44px;
     background-color: transparent;
     padding: 16px;
-    text-align: center;
+    color: #FFFFFF;
+    align-items: center;
 }
 
-.btn-2 img {
+
+.btn-flex {
+    display: flex;
+    height: 44px;
+    gap: 10px;
+    padding: 12px 16px;
+    font-weight: 600;
+    color: #FFFFFF;
+    background-color: #469165;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    align-items: center;
+}
+
+.btn-2 i {
     margin-right: 10px;
 
+}
+
+.button {
+    display: flex;
+    gap: 16px;
+    text-align: center;
 }
 
 /* Features */
@@ -300,6 +335,9 @@ nav {
     background-color: #F7F6F2;
     padding: 80px 40px;
     border-radius: 12px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .early-header h1 {
@@ -315,8 +353,13 @@ nav {
     margin-bottom: 16px;
     line-height: 24px;
 }
+.early-fotter {
+     display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
-.early-fotter .btn {
+.early-fotter .btn-flex {
     margin-bottom: 16px;
 }
 
@@ -351,6 +394,32 @@ footer {
     font-size: 16px;
 }
 
-.Social {
+.Social p{
     color: #FFFFFF;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 28px;
+}
+.icons a {
+    background-color: #fff;
+    color: #000;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    display: inline-flex;
+    align-items: center;
+  margin-right: 10px;
+    text-decoration: none;
+   
+      justify-content: center;
+}
+
+.icons {
+   margin-top: 16px;
+}
+
+
+.border{
+    border: 1px solid #E5E7EB;
+    margin-bottom: 30px;
 }
