--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ nav {
 }
 .menu li a:hover{
     color: #743b1a;
-    text-decoration: none;
+   
 }
 .fonts-Inter {
     font-family: "Inter", sans-serif;
@@ -124,9 +124,9 @@ nav {
     font-size: x-large;
     color: #df0f00;
     border-radius: 50%;
-    border: 2px solid black;
+    border: 1px solid black;
     margin-right: 7px;
-    box-shadow: 0px 2px 10px #469165;
+    box-shadow: 0 0 1px 3px #2b9758;
     margin-top: 0;
     margin-left: 10px;
 
