--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ nav {
     padding: 0px 7px 0 7px;
     background-repeat: no-repeat;
     text-align: center;
-    border: 1px solid black;
+   
     margin: 0;
 
 
@@ -459,6 +459,6 @@ footer {
 
 
 .border{
-    border: 1px solid #E5E7EB;
+    border: 1px solid rgba(141, 136, 136, 0.212);
     margin-bottom: 30px;
 }
